<resources>
    <string name="app_name">Tokotekkotek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_register">Register</string>
    <string name="et_nama">Masukkan Nama</string>
    <string name="et_email">Masukkan Email</string>
    <string name="et_password">Masukkan Password</string>
    <string name="btn_register">Register</string>
    <string name="txt_splash">Tokotekkotek</string>
    <string name="txt_login">Login</string>
    <string name="item">item</string>
</resources>