<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.fragment.LoginFragment">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogin"
        android:hint="@string/et_email"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnameLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldDua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textField"
        android:hint="@string/et_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtNoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldDua"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:text="@string/txt_register"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFieldDua"
        android:layout_marginTop="50dp"
        android:text="@string/txt_login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>